--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@fortawesome/angular-fontawesome": "^0.6.0",
     "bootstrap": "^4.5.0",
     "fontawesome": "^5.6.3",
     "popper": "^1.0.1",
